--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "start:dev": "nodemon server",
     "seed": "node seeds/seed.js",
     "prettier": "prettier --write '**/*.js'"
-
   },
   "repository": {
     "type": "git",
@@ -29,6 +28,7 @@
     "prettier": "^2.6.2"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.2"
