--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "An API for a social network web application where users can share their thoughts, react to friends’ thoughts, and create a friend list. The API leverages Express.js for routing, a MongoDB database, and the Mongoose ODM.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
+    "watch": "nodemon server.js",
     "start:dev": "nodemon server",
-    "seed": "node seeds/seed.js",
     "prettier": "prettier --write '**/*.js'"
   },
   "repository": {
